Pane highlighting in tmux.conf instead of scripts

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,26 +1,46 @@
-# https://emacs.stackexchange.com/questions/39042
-# https://github.com/tmux/tmux/issues/131
-# Is this safe?
-set -sg escape-time 100  # Default is 500
-
+set -g default-terminal tmux-256color
 set -g mouse on
+set -g set-clipboard on
 set -g focus-events on
 set -g mode-keys vi
 set -g status-keys vi
 
-# These require tmux 3.3.
-# Alternatively, see https://stackoverflow.com/a/33553372/563359
-set -g pane-border-lines heavy
-# set -g pane-border-indicators both # Too much?
+# https://emacs.stackexchange.com/questions/39042
+# https://github.com/tmux/tmux/issues/131
+set -sg escape-time 100  # Default is 500
 
-set -g default-terminal tmux-256color
+
+#### Window highlighting and titles ####
+
 # `bg=brightyellow` is an ~OK color even on Chrome terminal's
 # default theme.
 set-window-option -g window-status-current-style underscore
-set -g set-clipboard on
 set -g set-titles on
 # Pane title first
 set -g set-titles-string "#T @#S:#I '#W' #{session_alerts}"
+
+
+#### Highlighting active pane ####
+
+# Looks good with terminal themes where `black` is lighter than
+# the terminal background, e.g. https://github.com/connorholyday/nord-kitty.
+set -g window-active-style 'fg=terminal,bg=terminal'
+set -g window-style 'fg=white,bg=black' # Or brightblack, or swap bg colors
+# To undo the above, do
+# tmux set -gu window-style
+
+# These require tmux 3.3.
+# Alternatively, see https://stackoverflow.com/a/33553372/563359
+set -g pane-border-lines heavy
+# set -g pane-border-indicators both # Too much.
+
+# Possible to add pane border coloring:
+# set -g pane-active-border-style "#{?pane_in_mode,fg=yellow,#{?synchronize-panes,fg=red,fg=green}},bg=black"
+# set -g pane-border-style bg=black 
+# To undo the above,
+# tmux set -ug pane-border-style; tmux set -ug pane-active-border-style
+
+#### Bindings ####
 
 bind-key -N 'Enter copy mode' -n M-C-B copy-mode
 bind-key -N 'Send M-C-b'         M-C-B send-keys M-C-B
