Note about terminal colors

--- a/.config/kitty/nord.conf
+++ b/.config/kitty/nord.conf
@@ -1,6 +1,8 @@
 # ilyagr: This is from
 # https://github.com/connorholyday/nord-kitty/blob/3a819c1f207cd2f98a6b7c7f9ebf1c60da91c9e9/nord.conf
-#
+# Useful related resorcces: https:// terminal.sexy,
+# https://github.com/arcticicestudio/nord-xresources/blob/develop/src/nord
+
 # The MIT License (MIT)
 #
 # Copyright (c) Connor Holyday <connorholyday@gmail.com>
