jj mergetool config

--- a/.config/jj/config.toml
+++ b/.config/jj/config.toml
@@ -3,6 +3,18 @@ name =  "Ilya Grigoriev"
 email = "ilyagr@users.noreply.github.com"
 
 [ui]
-# diff-editor="vimdiff"
 diff-editor = "vimdirdiff"
+merge-editor = "vimdiff"
+# merge-editor = "kdiff3"
 color = "always"
+
+[merge-tools]
+meld.program = "meld"
+meld.merge-args = ["$left", "$base", "$right", "-o", "$output"]
+kdiff3.program = "kdiff3"
+kdiff3.merge-args = ["$left", "$base", "$right", "-o", "$output"]
+vimdiff.program = "vimdiff"
+vimdiff.merge-args = ["-f", "-d", "$output", "-M",
+                      "$left", "$base", "$right",
+                      "-c", "wincmd J", "-c", "set modifiable",
+                      "-c", "set write"]
