Kitty edit the gruvbox-material theme

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -56,5 +56,12 @@ linux_display_server x11
 # "***", "~-", "-~", "~@", "/=", "/==", ]
 
 include kitty.site.conf
+
+# Different black & background colors for default theme
+# so that tmux can distinguish inactive panes
+color0  #2c2e32
 include nord.conf
 include gruvbox-material-dark.conf
+
+# TODO: Set wayland titlebar background to ~#2C2A32, foreground to something reasonable
+# TODO: Consider using alacritty default theme with above color0 patch
