VS Code rust-analizer config

--- a/.config/Code/User/ilyagr_home_config/settings.json
+++ b/.config/Code/User/ilyagr_home_config/settings.json
@@ -124,9 +124,8 @@
     "Lua.telemetry.enable": true,
     "code-eol.decorateBeforeEol": true,
     "editor.stickyScroll.enabled": true,
-    "rust-analyzer.checkOnSave.enable": false,
     "editor.inlayHints.enabled": "offUnlessPressed",
-    "rust-analyzer.cargo.buildScripts.overrideCommand": null,
+    // "rust-analyzer.cargo.buildScripts.overrideCommand": null,
     "workbench.sideBar.location": "right",
     // "remote.SSH.defaultExtensions": [
     //     "gitpod.gitpod-remote-ssh"
