Tmux hook to dim all panes of inactive terminal

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -26,7 +26,10 @@ set -g set-titles-string "#T @#S:#I '#W' #{session_alerts}"
 # the terminal background, e.g. https://github.com/connorholyday/nord-kitty.
 set -g window-active-style 'fg=terminal,bg=terminal'
 set -g window-style 'fg=white,bg=black' # Or brightblack, or swap bg colors
-# To undo the above, do
+set-hook -g client-focus-out "set -g window-active-style 'fg=white,bg=black'"
+set-hook -g client-focus-in "set -g window-active-style 'fg=terminal,bg=terminal'"
+
+# To undo the above, remove the hook (create a binding?) and do
 # tmux set -gu window-style
 
 # These require tmux 3.3.
