--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -5,6 +5,13 @@ set -g focus-events on
 set -g mode-keys vi
 set -g status-keys vi
 
+# Ms modifies OSC 52 clipboard handling to work with mosh, see
+# https://gist.github.com/yudai/95b20e3da66df1b066531997f982b57b
+# Should be unnecessary in the next release of tmux
+# after 3.3a (https://github.com/tmux/tmux/issues/3192)
+set -ag terminal-overrides "vte*:XT:Ms=\\E]52;c;%p2%s\\7,xterm*:XT:Ms=\\E]52;c;%p2%s\\7"
+set -as terminal-features ",gnome*:RGB,xterm-kitty:RGB,alacritty:RGB,xterm-256color:RGB"
+
 # https://emacs.stackexchange.com/questions/39042
 # https://github.com/tmux/tmux/issues/131
 set -sg escape-time 100  # Default is 500
@@ -28,8 +35,10 @@ set -g window-active-style 'fg=terminal,bg=terminal'
 set -g window-style 'fg=white,bg=black' # Or brightblack, or swap bg colors
 set-hook -g client-focus-in "set -g window-active-style 'fg=terminal,bg=terminal'"
 set-hook -g client-focus-out "set -g window-active-style 'fg=white,bg=black'"
-# set-hook -g client-focus-out "set -g window-active-style 'fg=terminal,bg=black'"
-# set -g window-style 'fg=terminal,bg=black'
+
+# Uncomment the following to make dimming more subtle
+set-hook -g client-focus-out "set -g window-active-style 'fg=terminal,bg=black'"
+set -g window-style 'fg=terminal,bg=black'
 
 # To undo the above, remove the hook (create a binding?) and do
 # tmux set -gu window-style
