More kitty + tmux
Tmux: C-b Tab as C-b l alias

--- a/.config/kitty/gruvbox-material-dark.conf
+++ b/.config/kitty/gruvbox-material-dark.conf
@@ -13,8 +13,8 @@ inactive_tab_background #282828
 # "Light"
 background #32302f
 selection_foreground #32302f
-active_tab_background #32302f
-inactive_tab_background #32302f
+# active_tab_background #32302f
+# inactive_tab_background #32302f
 
 foreground #d4be98
 
