--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -41,10 +41,12 @@ map kitty_mod+6  debug_config
 map kitty_mod+equal     change_font_size all +0.5
 map kitty_mod+minus     change_font_size all -0.5
 
+tab_bar_edge top
 # Suppress a stupid warning on ChromeOS (older kitty)
 # or nothing working (newer kitty). Should change
 # it back to `auto` when that's fixed.
 linux_display_server x11
+wayland_titlebar_color background
 
 # If I wanted to have ligatures, here are the ones I'd
 # want to disable.
