--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -73,6 +73,7 @@ bind -N 'New window'         c   new-window   -c '#{pane_current_path}'
 bind -N 'New window in ~'    C-c new-window
 bind -N 'Split vertically'   '"' split-window -c '#{pane_current_path}'
 bind -N 'Split horizontally' '%' split-window -h -c '#{pane_current_path}'
+bind -N 'Select the previously current window' Tab last-window
 
 bind -N 'Move pane to another window' \
     j command-prompt -p index "join-pane -f -t '%%.'"
