--- a/.config/kitty/gruvbox-material-dark.conf
+++ b/.config/kitty/gruvbox-material-dark.conf
@@ -8,7 +8,7 @@ inactive_tab_background #282828
 # # "Hard"
 # background #1d2021
 # selection_foreground #1d2021
-# active_tab_background #1d2021
+active_tab_background #1d2021
 # inactive_tab_background #1d2021
 # "Light"
 background #32302f
