Fix subtle bug in tmux hook config

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -33,11 +33,11 @@ set -g set-titles-string "#T @#S:#I '#W' #{session_alerts}"
 # the terminal background, e.g. https://github.com/connorholyday/nord-kitty.
 set -g window-active-style 'fg=terminal,bg=terminal'
 set -g window-style 'fg=white,bg=black' # Or brightblack, or swap bg colors
-set-hook -g client-focus-in "set -g window-active-style 'fg=terminal,bg=terminal'"
-set-hook -g client-focus-out "set -g window-active-style 'fg=white,bg=black'"
+set-hook -g client-focus-in "set window-active-style 'fg=terminal,bg=terminal'"
+set-hook -g client-focus-out "set window-active-style 'fg=white,bg=black'"
 
 # Uncomment the following to make dimming more subtle
-set-hook -g client-focus-out "set -g window-active-style 'fg=terminal,bg=black'"
+set-hook -g client-focus-out "set window-active-style 'fg=terminal,bg=black'"
 set -g window-style 'fg=terminal,bg=black'
 
 # To undo the above, remove the hook (create a binding?) and do
