Alacritty theme for Kitty (disabled by default)

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -63,7 +63,6 @@ include kitty.site.conf
 # so that tmux can distinguish inactive panes
 color0  #2c2e32
 include nord.conf
+# Alacritty default theme (more or less)
+include Tomorrow_Night.conf
 include gruvbox-material-dark.conf
-
-# TODO: Set wayland titlebar background to ~#2C2A32, foreground to something reasonable
-# TODO: Consider using alacritty default theme with above color0 patch
