Tmux: allow selecting pane with Ctrl+Click

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -74,6 +74,8 @@ bind -N 'New window in ~'    C-c new-window
 bind -N 'Split vertically'   '"' split-window -c '#{pane_current_path}'
 bind -N 'Split horizontally' '%' split-window -h -c '#{pane_current_path}'
 bind -N 'Select the previously current window' Tab last-window
+# Make it possible to select a pane with Ctrl+Click
+bind-key    -T root         C-MouseDown1Pane      ' select-pane -t = \; send-keys -M'
 
 bind -N 'Move pane to another window' \
     j command-prompt -p index "join-pane -f -t '%%.'"
