Fix to tmux Ctrl-Click

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -59,13 +59,15 @@ set -g pane-border-lines heavy
 bind-key -N 'Enter copy mode' -n M-C-B copy-mode
 bind-key -N 'Send M-C-b'         M-C-B send-keys M-C-B
 
-bind-key C-M set mouse \; display-message 'Mouse #{?mouse,on,off}'
-bind-key C-R source ~/.config/tmux/tmux.conf \; display-message "Config reloaded."
-bind-key -n DoubleClick1Pane select-pane\; resize-pane -Z
-
 # Don't show the note. Use C-b ? for that
 bind-key -N "Show commands for a key combination" / command-prompt -k -p key -1 "list-keys -1 \"%%%\""
 # bind-key -g ? list-keys -Na # Use :lsk instead?
+
+bind-key C-M set mouse \; display-message 'Mouse #{?mouse,on,off}'
+bind-key C-R source ~/.config/tmux/tmux.conf \; display-message "Config reloaded."
+
+bind-key -n DoubleClick1Pane select-pane\; resize-pane -Z
+bind-key    -T root         C-MouseDown1Pane      select-pane -t = \; send-keys -M
 
 # Options to keep or drop CWD
 bind -N 'New window'         c   new-window   -c '#{pane_current_path}'
@@ -75,7 +77,6 @@ bind -N 'Split vertically'   '"' split-window -c '#{pane_current_path}'
 bind -N 'Split horizontally' '%' split-window -h -c '#{pane_current_path}'
 bind -N 'Select the previously current window' Tab last-window
 # Make it possible to select a pane with Ctrl+Click
-bind-key    -T root         C-MouseDown1Pane      ' select-pane -t = \; send-keys -M'
 
 bind -N 'Move pane to another window' \
     j command-prompt -p index "join-pane -f -t '%%.'"
