--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -21,7 +21,7 @@ set -sg escape-time 100  # Default is 500
 
 # `bg=brightyellow` is an ~OK color even on Chrome terminal's
 # default theme.
-set-window-option -g window-status-current-style underscore
+set-window-option -g window-status-current-style "underscore,bold"
 set -g set-titles on
 # Pane title first
 set -g set-titles-string "#T @#S:#I '#W' #{session_alerts}"
