--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -67,7 +67,9 @@ bind-key C-M set mouse \; display-message 'Mouse #{?mouse,on,off}'
 bind-key C-R source ~/.config/tmux/tmux.conf \; display-message "Config reloaded."
 
 bind-key -n DoubleClick3Pane select-pane\; resize-pane -Z
-bind-key    -T root         C-MouseDown1Pane      select-pane -t = \; send-keys -M
+bind-key -n C-DoubleClick1Pane select-pane\; resize-pane -Z
+# bind-key    -T root         C-MouseDown1Pane      select-pane -t = \; send-keys -M
+bind-key    -T root         C-MouseDown1Pane      select-pane -t = \; display-message 'tmux captures C-Click'
 
 # Options to keep or drop CWD
 bind -N 'New window'         c   new-window   -c '#{pane_current_path}'
