--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -93,3 +93,5 @@ bind S-Up    move-pane -h -t '.{up-of}'
 bind S-Right move-pane -t '.{right-of}'
 bind S-Left  move-pane -t '.{left-of}'
 bind S-down  move-pane -h -t '.{down-of}'
+
+source-file -q ~/.config/tmux/tmux-local.conf
